2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkclipboard.c (gtk_clipboard_set_text): Don't hardwire
	the supported text targets here, use 
	gtk_target_list_add_text_targets().  (#156404)

	* gtk/gtkliststore.c (gtk_list_store_reorder): Don't
	loop over the sentinel node.  (#156298, Torsten Schoenfeld)

2004-10-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_start_editing): Use
	g_signal_connect_object() to prevent premature finalization
	of the cell_editable while the key_press_event signal is
	handled.  (#156325, Olivier Andrieu)

	* *: Clean up many sparse warnings.  (#156698, Kjartan Maraas)
	
	* gtk/gtktreeview.c (gtk_tree_view_remove_widget): Disconnect
	from the remove-widget signal after removing the signal.

	* gtk/gtkaboutdialog.c (gtk_show_about_dialog): Destroy
	the dialog with the parent.  (#156557, Paolo Borelli)

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* Bump version

	* === Released 2.5.4 ===

	* Makefile.am (EXTRA_DIST): Remove po/makefile.mingw

2004-10-28  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkclipboard.c: (gtk_clipboard_set_can_store):
	* gtk/gtkclipboard.h:
	Make targets const.

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/Makefile.am (gtkalias.h): 
	* gdk/Makefile.am (gdkalias.h): Fix srcdir != builddir build.
	(#156547, Thomas Fitzsimmons)
	
	* NEWS: Updates.

	* gtk/gtkclipboard.c (gtk_clipboard_set_can_store): Silently
	ignore non-CLIPBOARD clipboards.  (#156610, Christian Persch)

	* gtk/gtksettings.c: Make it build on windows. (#156618,
	Kazuki IWAMOTO)

2004-10-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimcontextsimple.c (check_hex): Stop preediting if strtoul 
	couldn't parse the complete preedit string.  (#156434)

	* gtk/gtkmessagedialog.c: 
	* gtk/gtkfilechooserbutton.c: Add missing includes.  (#156503, 
	Kazuki IWAMOTO)

	* gtk/gtkimage.h: 
	* gtk/gtkimage.c (gtk_image_get_icon_name): Make the icon_name 
	parameter G_CONST_RETURN.
	