@@ -1,3 +1,12 @@
+2004-10-29  Hans Breuer  <hans@breuer.org>
+
+	* gdk/makefile.msc gtk/makefile.msc.in : updated
+
+	* gdk/win32/gdkdisplay-win32.c : dummy implementations for
+	gdk_display_supports_clipboard_persistence, gdk_display_store_clipboard
+
+	* gtk/gtkmodules.c : #include "gtkprivate.h" for GTK_LIBDIR
+
 2004-10-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkclipboard.c (gtk_clipboard_set_text): Don't hardwire
