@@ -58,6 +58,7 @@ gdk-win32-backend :
 all: \
 	..\config.h \
 	gdkconfig.h \
+	gdkalias.h \
 	gdkenumtypes.h \
 	gdkenumtypes.c \
 	gdkmarshalers.h \
@@ -141,6 +142,13 @@ gdkenumtypes.c: $(gdk_public_h_sources) makeenums.pl
 
 gdkconfig.h : gdkconfig.h.win32
 	copy gdkconfig.h.win32 gdkconfig.h
+
+gdkalias.h: gdk.symbols
+	perl makegdkalias.pl < gdk.symbols > gdkalias.h
+
+gdk.def: gdk.symbols
+	echo EXPORTS > gdk.def
+	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 gdk.symbols >> gdk.def
 
 libgdk-win32-$(GTK_VER)-0.dll : $(gdk_OBJECTS) gdk.def win32\gdk-win32.lib
 	$(CC) $(CFLAGS) -LD -Fe$@ $(gdk_OBJECTS) win32\gdk-win32.lib $(EXTRALIBS) \
